[gd_scene load_steps=6 format=3 uid="uid://ic5kydsh7con"]

[ext_resource type="Script" uid="uid://ou5po268d6wt" path="res://tigger/example.gd" id="1_48g2q"]
[ext_resource type="Texture2D" uid="uid://cu38r72naboe" path="res://asset/icon_skillBG.png" id="2_u6ver"]
[ext_resource type="Texture2D" uid="uid://sjwi20xre50p" path="res://skill/asset/doubleShoot.png" id="3_u6ver"]

[sub_resource type="LabelSettings" id="LabelSettings_3qrbh"]
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u6ver"]
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="example" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -377.0
offset_right = 377.0
offset_bottom = 200.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_48g2q")

[node name="Control" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="iconBG" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u6ver")
expand_mode = 1
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="Control/iconBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Control" type="Control" parent="Control/iconBG/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/iconBG/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_u6ver")
expand_mode = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
clip_contents = true
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
texture = ExtResource("2_u6ver")
patch_margin_left = 26
patch_margin_top = 8
patch_margin_right = 25
patch_margin_bottom = 12
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
offset_right = 396.0
offset_bottom = 112.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="skillName" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "嘻嘻嘻嘻嘻嘻嘻嘻嘻嘻嘻嘻"
label_settings = SubResource("LabelSettings_3qrbh")

[node name="skillTips" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "啊啊啊啊"
label_settings = SubResource("LabelSettings_u6ver")
